--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GameActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".GameActivity"
+            android:screenOrientation="portrait" />
         <activity android:name=".GameOverActivity" />
         <activity android:name=".OptionsActivity" />
         <activity android:name=".RulesActivity" />
-        <activity android:name=".GameActivity2" />
-        <activity android:name=".ViewRulesActivity"></activity>
+        <activity android:name=".ViewRulesActivity" />
+        <activity android:name=".SetRuleActivity"></activity>
     </application>
 
 </manifest>
