--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".OptionsActivity" />
         <activity android:name=".RulesActivity" />
         <activity android:name=".ViewRulesActivity" />
-        <activity android:name=".SetRuleActivity"></activity>
+        <activity android:name=".SetRuleActivity" />
+        <activity android:name=".SaveLoadRulesActivity"></activity>
     </application>
 
 </manifest>
